--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,7 +34,7 @@
       }
 
       a {
-        color: #89b4fa;
+        text-decoration: none;
       }
 
       @media only screen and (max-width: 600px) {
@@ -46,9 +47,10 @@
   </head>
   <body>
     <div class="container">
-      <p> My name is <span style="color: #fcd3cb;">Arya</span>. I'm a <span style="color: #a6e3a1;">Developer</span> from <span style="color: #74c7ec;">Iran</span>. I also enjoy <span style="color: #fab387;">Gaming</span>. I'm currently <span id="discordStatus"  style="color: #8b85d3;"></span> at Discord, and my username is <span id="discordUsername" style="color: #f38ba8;"></span>. Time is <span id="timeDisplay" style="color: #fccbf0;"></span>. Check out my <span class="link">
-          <a href="https://github.com/notarya100" target="_blank" style="color: #f9e2af;">GitHub</a>
-        </span> too. </p>
+      <p> My name is <span style="color: #fcd3cb;">Arya</span>. I'm a <span style="color: #a6e3a1;">Developer</span> from <span style="color: #74c7ec;">Iran</span>. I also enjoy <span style="color: #fab387;">Gaming</span>. I'm currently <span id="discordStatus"  style="color: #8b85d3;"></span> at Discord and my username is <span id="discordUsername" style="color: #f38ba8; font-family: 'JetBrains Mono';"></span>. Time is <span id="timeDisplay" style="color: #fccbf0; font-family: 'JetBrains Mono';"></span>. Check out my <span class="link">
+          <a href="https://github.com/notarya100" target="_blank" style="color: #7e85a0;">GitHub</a>
+        </span> and  <a href="stuff/index.html" target="_blank" style="color: #8a99d6;">Stuff I Use</a>
+      </span>too.  </p>
     </div>
     <script>
       fetch('https://api.lanyard.rest/v1/users/1147999469854523414/').then(response => response.json()).then(data => {
