--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container">
       <p> My name is <span style="color: #fcd3cb;">Arya</span>. I'm a <span style="color: #a6e3a1;">Developer</span> from <span style="color: #74c7ec;">Iran</span>. I also enjoy <span style="color: #fab387;">Gaming</span>. I'm currently <span id="discordStatus"  style="color: #8b85d3;"></span> at Discord and my username is <span id="discordUsername" style="color: #f38ba8; font-family: 'JetBrains Mono';"></span>. Time is <span id="timeDisplay" style="color: #fccbf0; font-family: 'JetBrains Mono';"></span>. Check out my <span class="link">
           <a href="https://github.com/notarya100" target="_blank" style="color: #7e85a0;">GitHub</a>
-        </span> and  <a href="stuff/index.html" target="_blank" style="color: #8a99d6;">Stuff I Use</a>
+        </span> and  <a href="stuff" target="_blank" style="color: #8a99d6;">Stuff I Use</a>
       </span>too.  </p>
     </div>
     <script>
