--- a/stuff/index.html
+++ b/stuff/index.html
@@ -14,7 +14,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        min-height: 100vh;
+        min-height: 100dvh;
         background-color: #1e1e2e;
         color: #fff;
         font-family: 'Syne', sans-serif;
