--- a/stuff/index.html
+++ b/stuff/index.html
@@ -26,7 +26,9 @@
         width: 90%;
         margin: 0 auto;
       }
-
+::selection {
+  color: transparent;
+}
       h1 {
         font-size: 3em;
         color: #d4ebd1;
