--- a/stuff/index.html
+++ b/stuff/index.html
@@ -27,7 +27,7 @@
         margin: 0 auto;
       }
 ::selection {
-  color: transparent;
+  background-color: transparent;
 }
       h1 {
         font-size: 3em;
