--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="NotArya">
+    <meta name="description" content="Welcome to my personal Website!">
+    <meta name="keywords" content="notarya, not-arya, not, arya, developer, discord, notarya100, dev">
+    <meta name="author" content="Arya Honarmand">
+
+    <!-- Title -->
     <title>NotArya</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jetbrains+Mono:wght@400;700&display=swap">
-    <style>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+    <!-- Color Theme -->
+    <meta name="theme-color" content="#007bff">
+
+    <!-- Google Fonts - Space Grotesk -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
       body {
         margin: 0;
         padding: 0;
@@ -17,7 +32,7 @@
         height: 100dvh;
         background-color: #1e1e2e;
         color: #fff;
-        font-family: 'Syne', sans-serif;
+        font-family: 'Space Grotesk', sans-serif;
       }
 
       .container {
@@ -26,7 +41,10 @@
         width: 90%;
       }
 
-   
+      a:hover {
+        background-color: rgb(63, 63, 60);
+        transition: ease-in-out 0.25s;
+      }
 
       p {
         font-size: 3em;
@@ -38,7 +56,6 @@
       }
 
       @media only screen and (max-width: 600px) {
-    
         p {
           font-size: 1.5em;
         }
@@ -47,10 +64,10 @@
   </head>
   <body>
     <div class="container">
-      <p> My name is <span style="color: #fcd3cb;">Arya</span>. I'm a <span style="color: #a6e3a1;">Developer</span> from <span style="color: #74c7ec;">Iran</span>. I also enjoy <span style="color: #fab387;">Gaming</span>. I'm currently <span id="discordStatus"  style="color: #8b85d3;"></span> at Discord and my username is <span id="discordUsername" style="color: #f38ba8; font-family: 'JetBrains Mono';"></span>. Time is <span id="timeDisplay" style="color: #fccbf0; font-family: 'JetBrains Mono';"></span>. Check out my <span class="link">
+      <p> My name is <span style="color: #fcd3cb;">Arya</span>. I'm a <span style="color: #a6e3a1;">Developer</span> from <span style="color: #74c7ec;">Iran</span>. I also enjoy <span style="color: #fab387;">Gaming</span>. I'm currently <span id="discordStatus" style="color: #8b85d3;"></span> at Discord and my username is <span id="discordUsername" style="color: #f38ba8;"></span>. Time is <span id="timeDisplay" style="color: #fccbf0;"></span>. Check out my <span class="link">
           <a href="https://github.com/notarya100" target="_blank" style="color: #7e85a0;">GitHub</a>
-        </span> and  <a href="stuff" target="_blank" style="color: #8a99d6;">Stuff I Use</a>
-      </span>too.  </p>
+        </span> and <a href="stuff" target="_blank" style="color: #8a99d6;">Stuff I Use</a>
+        </span>too. </p>
     </div>
     <script>
       fetch('https://api.lanyard.rest/v1/users/1147999469854523414/').then(response => response.json()).then(data => {
