--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="NotArya">
-    <meta name="description" content="Welcome to my personal Website!">
+    <meta name="description" content="I'm Arya, A 14-year-old Developer from Iran. Welcome to my place in the world wide web!">
     <meta name="keywords" content="notarya, not-arya, not, arya, developer, discord, notarya100, dev">
     <meta name="author" content="Arya Honarmand">
 
