--- a/stuff/index.html
+++ b/stuff/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Tools</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700&display=swap">
+    <meta name="title" content="NotArya">
+    <meta name="description" content="I'm Arya, A 14-year-old Developer from Iran. Welcome to my place in the world wide web!">
+    <meta name="keywords" content="notarya, not-arya, not, arya, developer, discord, notarya100, dev">
+    <meta name="author" content="Arya Honarmand">
+
+    <!-- Title -->
+    <title>NotArya | Stuff</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+    <!-- Color Theme -->
+    <meta name="theme-color" content="#007bff">
+
+    <!-- Google Fonts - Space Grotesk -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
    
     <style>
@@ -17,7 +33,7 @@
         min-height: 100dvh;
         background-color: #1e1e2e;
         color: #fff;
-        font-family: 'Syne', sans-serif;
+        font-family: 'Space Grotesk', sans-serif;
       }
 
       .container {
@@ -62,6 +78,7 @@
       .tool-content {
         display: flex;
         align-items: center;
+        font-weight: 400;
       }
 
       .tool-icon {
