--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="NotArya">
-    <meta name="description" content="I'm Arya, A 14-year-old Developer from Iran. Welcome to my place in the world wide web!">
+    <meta name="description" content="I'm Arya, A 14-year-old Developer from Iran.">
     <meta name="keywords" content="notarya, not-arya, not, arya, developer, discord, notarya100, dev">
     <meta name="author" content="Arya Honarmand">
 
@@ -64,38 +65,8 @@
   </head>
   <body>
     <div class="container">
-      <p> My name is <span style="color: #fcd3cb;">Arya</span>. I'm a <span style="color: #a6e3a1;">Developer</span> from <span style="color: #74c7ec;">Iran</span>. I also enjoy <span style="color: #fab387;">Gaming</span>. I'm currently <span id="discordStatus" style="color: #8b85d3;"></span> at Discord and my username is <span id="discordUsername" style="color: #f38ba8;"></span>. Time is <span id="timeDisplay" style="color: #fccbf0;"></span>. Check out my <span class="link">
-          <a href="https://github.com/notarya100" target="_blank" style="color: #7e85a0;">GitHub</a>
-        </span> and <a href="stuff" target="_blank" style="color: #8a99d6;">Stuff I Use</a>
-        </span>too. </p>
+      <p> I'm <span style="color: #9f78cc;">Arya</span>. </p>
     </div>
-    <script>
-      fetch('https://api.lanyard.rest/v1/users/1147999469854523414/').then(response => response.json()).then(data => {
-        const user = data.data;
-        const user_info = user.discord_user;
-        const username = user_info.username;
-        const status = user.discord_status;
-        if (status === "dnd") {
-          var status2 = "in DND mode";
-        } else {
-          var status2 = status;
-        }
-        document.getElementById('discordStatus').textContent = `${status2}`;
-        document.getElementById('discordUsername').textContent = `${username}`;
-      }).catch(error => {
-        console.error('Error fetching user status:', error);
-      });
-      updateTime();
-
-      function updateTime() {
-        var offset = 3.5; // UTC+3:30
-        var time = new Date(new Date().getTime() + offset * 3600 * 1000).toUTCString().replace(/GMT$/, "");
-        var time1 = time.split(" ");
-        var time2 = time1[4].split(":");
-        var time3 = time2[0] + ":" + time2[1];
-        document.getElementById("timeDisplay").innerHTML = "" + time3 + "";
-      }
-      setInterval(updateTime, 1000);
-    </script>
+   
   </body>
 </html>
