Fixed some stuff

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-content">
-          <p class="footer-text"> © 2023 Created by NotArya </p>
+          <p class="footer-text"> © 2024 Created by NotArya </p>
           
           <label class="theme-switch" for="theme-switch">
             <i class="fas fa-moon"></i>
@@ -88,7 +88,7 @@
         </div>
       </div>
     </footer>
-    <div class='cursor' id="cursor"></div>
+
 
   <script>
    document.addEventListener("DOMContentLoaded", function () {
@@ -100,7 +100,7 @@
   projects.appendChild(loadingMessage);
 
   // GitHub username
-  const githubUsername = 'notarya100';
+  const githubUsername = 'nottarya';
 
   // GitHub API endpoint for user repositories
   const apiUrl = `https://api.github.com/users/${githubUsername}/repos`;
