--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a href="https://github.com/notarya100">GitHub</a>
+            <a href="https://github.com/nottarya">GitHub</a>
           </li>
         </ol>
       </nav>
